<resources>
    <string name="app_name">IClass</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_btn_text">Login</string>
    <string name="SignUp_btn_text">Sign Up</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="Student_profile">Student Profile</string>
    <string name="Student_Name">S. K. Ahinsa</string>
    <string name="student_Email">ahinsa@gmail.com</string>
    <string name="Date_of_birth">09/09/2000</string>
    <string name="phn_N0">0715868954</string>
    <string name="School">Nuga Sewana</string>
    <string name="gender">Gender</string>
    <string name="Teacher_profile">Teacher Profile</string>
    <string name="Teacher_name">L. K. Snehalatha</string>
    <string name="Teacher_Email">snehalatha2020@gmail.com</string>
    <string name="Teacher_phn">0772447857</string>
    <string name="Teacher_Gender">Female</string>
    <string name="Teacher_DOB">02/01/1998</string>
    <string name="Student_profile_edit">Edit Student Profile</string>
    <string name="btn_saveChanges">Save Changes</string>
    <string name="Teacher_profile_edit">Edit Teacher Profile</string>
    <string name="Sign_up_Teacher">SignUp as a Teacher</string>
    <string name="Already_log">Already have a login ?</string>
    <string name="Sign_up_Student">SignUp as a Student</string>
    <string name="reminder">Add Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="Rem_name">Reminder name</string>
    <string name="Rem_attr">Reminder</string>
    <string name="hour">Enter Hours</string>
    <string name="min">Enter Minutes</string>
    <string name="create">Create</string>
    <string name="signIn">Sign in as  a Student</string>
    <string name="singButton">Sign in</string>
    <string name="LEmail">Email</string>
    <string name="pass">Password</string>
    <string name="signInTeacher">Sign in as Teacher</string>


    <string name="CBar">Create Class Room</string>
    <string name="Cname">Class Name :</string>
    <string name="Subject">Subject :</string>
    <string name="Create">Create Class</string>
    <string name="Sub">Subject :</string>
    <string name="tName">Teacher Name :</string>
    <string name="ins">Institute :</string>
    <string name="des">Description :</string>


    <!-- Edit Class Room -->

    <string name="Cview">Class View</string>
    <string name="nav2">Edit Class Room</string>
    <string name="Class1"> Class 01</string>
    <string name="SubInsert">English</string>
    <string name="TeacherNInsert">L.K.Senehelatha</string>
    <string name="Ins">eClass</string>
    <string name="Des">This is the grade 10 class</string>
    <string name="Save">Save Changes</string>

    <string name="Get">Get Invitation ID</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>

    <!-- Join Class Room -->
    <string name="JoinBanner">JOIN CLASS</string>
    <string name="Cid">Enter Class ID</string>
    <string name="JPassword">Enter Password</string>
    <string name="joinButton">JOIN</string>

    <string name="Ca1">Class 01</string>
    <string name="Std">Students</string>
    <string name="Nt">Notices</string>
    <string name="mClass">My Class</string>
    <string name="MyN">My Note</string>
    <string name="searchBar">Search</string>
    <string name="Tdash">MY CLASS</string>
    <string name="notes">MY NOTES</string>

    <!-- Notice -->
    <string name="Edit_notice">Edit Notice</string>
    <string name="Notice_1">Notice 01</string>
    <string name="Descr">This is a teacher notice</string>

    <string name="notice_name">Notice Name</string>
    <string name="notice_description">Descripption</string>
    <string name="crt_notice1">Notice 1</string>
    <string name="crt_descrpt">Description</string>
    <string name="crt_noticename">Notice Name</string>
    <string name="crt_creat">Ceate Notice</string>
    <string name="crt_name">Notice Name</string>
    <string name="crt_button">Create</string>
    <string name="teacher_view">Class 1</string>
    <string name="tcg_notice1">Notice 1</string>
    <string name="teac_notice1">This is something regarding the teacher notices.</string>
    <string name="teacnoti_date">2020/03/18</string>
    <string name="teac_noyice2">Notice 2</string>
    <string name="Teach_notice2">Notice 2</string>
    <string name="teach_notice31">Notice 3</string>
    <string name="teac_descrpt2">This is something regarding the teacher notices.</string>
    <string name="descripton2">"This is something regarding the teacher notices. "</string>
    <string name="teach_date21">2020/03/18</string>
    <string name="teach_notice3">Notice 3</string>
    <string name="teach_nOtice3">"This is something regarding the teacher notices. "</string>
    <string name="teach_date2">2020/03/18</string>
    <string name="teach_date3">2020/03/18</string>
    <string name="student_cls1">Class 1</string>
    <string name="student_notice1">Notice 1</string>
    <string name="std_des1" />
    <string name="student_DES1">This is something regarding the teacher notices.</string>
    <string name="student_Date1">2020/03/18</string>
    <string name="student_notice2">Notice 2</string>
    <string name="student_DES2">This is something regarding the teacher notices.</string>
    <string name="student_Date2">"2020/03/18 "</string>
    <string name="student_notice3">Notice 3</string>
    <string name="student_DES3">This is something regarding the teacher notices.</string>
    <string name="student_Date3">2020/03/18</string>
    <string name="class1">Class 1</string>
    <string name="notice1">Notice 1</string>
    <string name="notice2">Notice 2</string>

    <!-- Notes -->
    <string name="Edit_note">Edit Note</string>
    <string name="Note_name">Note Name</string>
    <string name="text_dept">Description</string>
    <string name="Note_name_1">Note 1</string>
    <string name="dept_1">This note is about users personal note.</string>
    <string name="Create_Note">Create Note</string>
    <string name="btn_Create">Create</string>
    <string name="viewNote">View Note</string>
    <string name="note_values" />
    <string name="third_note" />
    <string name="Thrid_note" />
    <string name="Note_3">Note 03</string>
    <string name="date_3">2020/03/18</string>
    <string name="value_3">Thi is a note about users personal note.</string>
    <string name="createBtn">Create Note</string>
    <string name="first_note">Note 01</string>
    <string name="date_1">2020/03/18</string>
    <string name="value_1">"This is a note about users personal notes."</string>
    <string name="second_note">Note 02</string>
    <string name="date_2">2020/03/18</string>
    <string name="value_02">"This is a note about users personal notes."</string>
    <string name="manage_notes">Manage notes</string>
    <string name="add_new_note">Add new note</string>
    <string name="bio_note">bio note</string>
    <string name="description">description</string>
    <string name="delete_button">delete button</string>
    <string name="update_button">update button</string>
    <string name="simple_logout">logout</string>


</resources>